# wasm-from-zero

./: .gitignore  .pmat-metrics.toml  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml
.pmat-metrics/: memory-baseline.json
contracts/: binding-index.json  binding.yaml  wasm-lifecycle-v1.yaml  wasm-panels-v1.yaml  wasm-rendering-v1.yaml
docs/: demo-script.md
lean/: WasmFromZero.lean  lakefile.toml
lean/WasmFromZero/Theorems/: Canvas.lean  Lifecycle.lean  Panels.lean
m1-app/: Cargo.toml
m1-app/src/: lib.rs  main.rs
m1-app/tests/: probar_snapshot.rs
m1-canvas/: Cargo.toml
m1-canvas/src/: lib.rs  main.rs
m1-canvas/tests/: probar_snapshot.rs
m2-elm-wasm/: Cargo.toml
m2-elm-wasm/src/: lib.rs  main.rs
m2-elm-wasm/tests/: probar_snapshot.rs
m2-events/: Cargo.toml
m2-events/src/: lib.rs  main.rs
m2-events/tests/: probar_snapshot.rs
m3-charts/: Cargo.toml
m3-charts/src/: lib.rs  main.rs
m3-charts/tests/: probar_snapshot.rs
m3-components/: Cargo.toml
m3-components/src/: lib.rs  main.rs
m3-components/tests/: probar_snapshot.rs
m4-bundle/: Cargo.toml
m4-bundle/src/: lib.rs  main.rs
m4-bundle/tests/: probar_snapshot.rs
m4-tests/: Cargo.toml
m4-tests/src/: lib.rs  main.rs
m4-tests/tests/: probar_snapshot.rs
m5-dash/: Cargo.toml
m5-dash/src/: lib.rs  main.rs
m5-dash/tests/: probar_snapshot.rs
m5-dash/web/: index.html
wasm-demos/: Cargo.toml
wasm-demos/assets/: aprender-shell-base.apr
wasm-demos/src/: canvas_demo.rs  counter_demo.rs  lib.rs  logic.rs  process_table_demo.rs  shell_demo.rs  shell_model.rs  showcase_demo.rs  wasm_dash_demo.rs
wasm-demos/tests/: probar_canvas.rs  probar_counter.rs  probar_process_table.rs  probar_regression_gist.rs  probar_shell.rs  probar_showcase.rs  probar_wasm_dash.rs
wasm-demos/web/: index.html
wasm-demos/web/canvas/: index.html
wasm-demos/web/counter/: index.html
wasm-demos/web/process-table/: index.html
wasm-demos/web/shell/: index.html
wasm-demos/web/showcase/: index.html
wasm-demos/web/wasm-dash/: index.html
