[package]
name = "m2-elm-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Elm-style counter for WASM"

[lib]
path = "src/lib.rs"

[[bin]]
name = "counter-demo"
path = "src/main.rs"

[dependencies]
presentar-core = { package = "aprender-present-core", version = "0.33" }

[dev-dependencies]
proptest = "1"
presentar-test = { package = "aprender-present-test", version = "0.31" }
m4-tests = { path = "../m4-tests" }

[lints]
workspace = true
