[package]
name = "m5-dash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Capstone — composes everything into a small in-browser dashboard"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dash"
path = "src/main.rs"

[dependencies]
presentar-core = { package = "aprender-present-core", version = "0.33" }
m1-canvas = { path = "../m1-canvas" }
m1-app = { path = "../m1-app" }
m2-elm-wasm = { path = "../m2-elm-wasm" }
m2-events = { path = "../m2-events" }
m3-components = { path = "../m3-components" }
m3-charts = { path = "../m3-charts" }
m4-tests = { path = "../m4-tests" }

[dev-dependencies]
proptest = "1"
presentar-test = { package = "aprender-present-test", version = "0.31" }

[lints]
workspace = true
