[package]
name = "wasm-demos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Gallery of working WASM demos — one #[wasm_bindgen] entry per demo, all painted via m1-canvas + m3-components, no hand-written JS."

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
presentar-core = { package = "aprender-present-core", version = "0.33" }
# Vendored from presentar::browser::shell_autocomplete (aprender-present-lib 0.34) —
# the published umbrella crate has a broken include_bytes! in showcase.rs that hits
# wasm builds (see the same workaround in m5-dash/Cargo.toml). Same .apr file,
# same loader path, same model.
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
ruzstd = "0.7"
m1-canvas = { path = "../m1-canvas" }
m2-elm-wasm = { path = "../m2-elm-wasm" }
m3-components = { path = "../m3-components" }
m3-charts = { path = "../m3-charts" }
m4-tests = { path = "../m4-tests" }
m5-dash = { path = "../m5-dash" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement",
    "HtmlInputElement", "CanvasRenderingContext2d", "DomRect", "TextMetrics",
    "Event", "MouseEvent", "KeyboardEvent", "InputEvent",
    "EventTarget", "console",
] }

[lints]
workspace = true
